# telegram-assistant

./: Cargo.toml  README.md  flake.nix
common/: metrics.rs
metro-schedule/: Cargo.toml
metro-schedule/data/: eastbound-saturday-schedule.csv  eastbound-weekday-schedule.csv  eastbound-weekends-schedule.csv  westbound-saturday-schedule.csv  westbound-weekday-schedule.csv  westbound-weekdays-schedule.csv
metro-schedule/src/: lib.rs  main.rs
notification-service/: Cargo.toml
notification-service/src/: lib.rs  main.rs
rpc/: Cargo.toml  build.rs
rpc/proto/: metro-schedule.proto  spending-tracker.proto
rpc/src/: lib.rs
spending-tracker/: Cargo.toml
spending-tracker/public/: index.html
spending-tracker/src/: lib.rs  main.rs
telegram-bot/: Cargo.toml
telegram-bot/benches/: parser_benchmark.rs
telegram-bot/src/: config.rs  dispatch.rs  enviroplus.rs  lib.rs  main.rs  metro.rs  news.rs  notifications.rs  openweather.rs  parser.rs  spending.rs  sysinfo.rs  weather.rs
