[package]
name = "metro-schedule"
version = "0.2.2"
authors = ["Bryant Deters <bryantdeters@gmail.com"]
edition = "2021"

[dependencies]
axum = "^0.8"
anyhow = "1"
clap = {version = "4.5", features = ["cargo"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4.23"
csv = "1"
rust-embed = "8.7.0"
tokio = { version = "1", features = ["full"] }
