[package]
name = "rpc"
version = "0.1.0"
authors = ["Bryant Deters <bryantdeters@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7" # Rust Protocol Buffers implementation
prost-types = "0.7" # Contains definitions of Protocol Buffers well-known types

[build-dependencies]
prost-build = "0.7"
