[package]
name = "spending-tracker"
version = "0.4.0"
authors = ["Bryant Deters <bryantdeters@gmail.com>"]
edition = "2021"

[dependencies]
axum = "^0.6"
clap = {version = "4.1.1", features = ["cargo"]}
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rust-embed = "6.4.2"
mime_guess = "2"
rusty-money = "0.4"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["cors"] }

