[package]
name = "telegram-chatbot"
version = "0.7.3"
authors = ["Bryant Deters <bryantdeters@gmail.com>"]
edition = "2021"

[dependencies]
chrono = "0.4.23"
teloxide = {version = "0.12.2", features = ["auto-send", "macros"]}
serde = "1"
serde_json = "1"
serde_derive = "1"
reqwest = {version ="0.11.14", features = ["json"]}
#prometheus = "0.13"
tokio = { version =  "1.26.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.12"
#sysinfo = "0.27.0"
spending-tracker = { package = "spending-tracker", path = "../spending-tracker" }
metro-schedule = { package = "metro-schedule", path = "../metro-schedule" }
winnow = "0.3.5"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "parser_benchmark"
harness = false
